WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102227
Fix the MIPS build after
r134332
https://bugs.webkit.org/show_bug.cgi?id=102227
Summary
Fix the MIPS build after r134332
Csaba Osztrogonác
Reported
2012-11-14 06:52:54 PST
In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatch(JSC::CodeLocationDataLabelPtr)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146: error: 'startOfPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CallLinkInfo.cpp:31: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToPatchableBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::Address, void*)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:159: error: 'revertJumpReplacementToPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' make[2]: *** [obj/release/bytecode/CallLinkInfo.o] Error 1 make[2]: *** Waiting for unfinished jobs.... In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:46: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In static member function 'static JSC::CodeLocationLabel JSC::RepatchBuffer::startOfPatchableBranchPtrWithPatch(JSC::CodeLocationDataLabelPtr)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:146: error: 'startOfPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' In file included from /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/bytecode/CodeBlock.cpp:46: /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h: In member function 'void JSC::RepatchBuffer::revertJumpReplacementToPatchableBranchPtrWithPatch(JSC::CodeLocationLabel, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::Address, void*)': /data/buildbot/mips-1/qt-linux-mipsel-mips32r2-release/build/Source/JavaScriptCore/assembler/RepatchBuffer.h:159: error: 'revertJumpReplacementToPatchableBranchPtrWithPatch' is not a member of 'JSC::MacroAssembler' make[2]: *** [obj/release/bytecode/CodeBlock.o] Error 1
http://trac.webkit.org/changeset/134383
is a similar fix for ARM traditional (and
http://trac.webkit.org/changeset/134603
is the warning fix)
Attachments
speculative fix
(1.89 KB, patch)
2012-11-14 07:04 PST
,
Peter Gal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Gal
Comment 1
2012-11-14 06:56:31 PST
ohh... okay... will do it in a jiffy
Peter Gal
Comment 2
2012-11-14 07:04:53 PST
Created
attachment 174150
[details]
speculative fix This should get rid of the compile fail.
Csaba Osztrogonác
Comment 3
2012-11-14 07:08:02 PST
Comment on
attachment 174150
[details]
speculative fix LGTM, r=me.
WebKit Review Bot
Comment 4
2012-11-14 07:25:58 PST
Comment on
attachment 174150
[details]
speculative fix Clearing flags on attachment: 174150 Committed
r134608
: <
http://trac.webkit.org/changeset/134608
>
WebKit Review Bot
Comment 5
2012-11-14 07:26:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug