Fix the MIPS build after r134332 https://bugs.webkit.org/show_bug.cgi?id=102227

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2012-11-14
Reviewed by Csaba Osztrogonác.

Added missing methods for the MacroAssemblerMIPS, based on the MacroAssemblerARMv7.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::canJumpReplacePatchableBranchPtrWithPatch):
(MacroAssemblerMIPS):
(JSC::MacroAssemblerMIPS::startOfPatchableBranchPtrWithPatch):
(JSC::MacroAssemblerMIPS::revertJumpReplacementToPatchableBranchPtrWithPatch):

Canonical link: https://commits.webkit.org/120333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134608 268f45cc-cd09-0410-ab3c-d52691b4dbfc